# M

./: CMakeLists.txt  M.kdev4  Main.qml  main.cpp
.kdev4/: M.kdev4
Core/: CMakeLists.txt  Main.qml  main.cpp  patient.cpp  patient.h  patientrecored.cpp  patientrecored.h  repository.cpp  repository.h
UI/: CMakeLists.txt  Home.qml  databasemanager.cpp  databasemanager.h  main.cpp  tablemodel.cpp  tablemodel.h
UI/importedcontent/: README.md
